<resources>
    <string name="app_name" translatable="false">Sabha - سبحة</string>
    <string name="title_tasbih">Tasbih</string>
    <string name="title_dua">Dua</string>
    <string name="title_about_app">About App</string>
    <string name="about_app_text"> this app was made by wassim tech apps </string>
    <string name="raslouna">for your questions or suggestions please email us on : </string>
    <string name="PPCT">By using this you have accepted our
       <a href="https://wassimtechapps.blogspot.com/p/privacy-policy-wassim-tech-apps-built_20.html"> PRIVACY POLICY</a>
        And
        <a href="https://wassimtechapps.blogspot.com/p/terms-conditions-by-downloading-or_20.htmlhttps://wassimtechapps.blogspot.com/p/privacy-policy-wassim-tech-apps-built_20.html">TERMS &amp; CONDITIONS </a>
    </string>
    <string name="follow_us">follow us</string>
    <string name="more_apps">More Apps</string>
    <string name="follow_us_on_facebook">Follow us on Facebook</string>
    <string name="title_Sadaqah_Jarya">Ongoing Sadaqah</string>
    <string name="share_sadaqah_text">share this app and make it an ongoing sadaqah for the thousands of people  that\'s going to use it after you… share it with your friends</string>
    <string name="share_on_facebook">Share On Facebook</string>
    <string name="share_on_whatsapp">Share On What\'s app</string>
    <string name="share_on_twitter">Share On Twitter</string>
    <string name="share_on_messenger">Share On Messenger</string>
    <string name="copy_link">Copy Link</string>
    <string name="share_on_another_way">Share On Another Way</string>
    <string name="our_website">Our Website</string>
    <string name="morning_dua">Morning Dua</string>
    <string name="evening_dua">Evening Dua</string>
    <string name="before_sleeping_dua">Before Sleeping Dua</string>
    <string name="dua_before_and_after_eating">Eating Dua</string>
    <string name="aftar_the_prayer_dua">Aftar The Prayer Dua</string>
    <string name="share_other_text">hey ! download the Sabha - سبحة app and never forget to work for your Akhira again ! link : https://play.google.com/store/apps/details?id=wassimtech.sabha</string>
    <string name="app_link">https://play.google.com/store/apps/details?id=wassimtech.sabha</string>
    <string name="morning_dua1_title" >Dua to be recited in the morning :</string>
    <string name="morning_dua1_arabic" translatable="false">أَصْبَـحْـنا وَأَصْبَـحْ المُـلكُ للَّهِ رَبِّ العـالَمـين ، اللّهُـمَّ إِنِّـي أسْـأَلُـكَ خَـيْرَ هـذا الـيَوْم ، فَـتْحَهُ ، وَنَصْـرَهُ ، وَنـورَهُ وَبَـرَكَتَـهُ ، وَهُـداهُ ، وَأَعـوذُ بِـكَ مِـنْ شَـرِّ ما فـيهِ وَشَـرِّ ما بَعْـدَه</string>
    <string name="morning_dua1" translatable="false">The morning has come to me and the whole universe belongs to Allah, the Lord of the worlds, O Allah, I ask of you the good of the day, it\'s success and aid and it\'s nur (celestial light) and barakaat (blessings) and seek hidayah (guidance) and seek refuge from the evil in it (this day) and from the evil of that which is to come later.</string>
    <string name="morning_dua1_ar_en" translatable="false">asbahna wa asbaha almolko lilahu rabi al AAlamina allahoma ini asAaloka khayra hada al yawmi fathoho wa nasroho wa barakatoho wa hodah wa aOOdo bika min shari ma fihi wa shari mabaAAdahou</string>
    <string name="morning_dua2_title" >Alternatively, recite this dua :</string>
    <string name="morning_dua2_arabic" translatable="false">اللّهُـمَّ بِكَ أَصْـبَحْنا وَبِكَ أَمْسَـينا ، وَبِكَ نَحْـيا وَبِكَ نَمُـوتُ وَإِلَـيْكَ المَصِيْر</string>
    <string name="morning_dua2" translatable="false">O Allah we enter the day time and the evening and die with your Qudrat (power) and to You do we return</string>
    <string name="morning_dua2_ar_en" translatable="false">allahoma bika asbahna wa bika amsayna wa bika nahya wa bika namot wa ilayka al masir</string>
    <string name="morning_dua3_title" >When the sun rises recite :</string>
    <string name="morning_dua3_arabic" translatable="false">الْحَمْدُ لِلَّهِ الَّذِي أَقَالَنَا يَوْمَنَا هَذَا وَلَمْ يُهْلِكْنَا بِذُنُوبِنَا</string>
    <string name="morning_dua3" translatable="false">All praise be to Allah who has forgiven us today and not destroyed us due to our sin.</string>
    <string name="morning_dua3_ar_en" translatable="false">Al hamdo lilahy aladi aqalana yawmana hada wa lam yohlikna wa bidonobina</string>
    <string name="source_morning_dua1">the source of the duas : <a href="https://www.searchtruth.com/dua/1/">searchtruth</a></string>
    <string name="morning_and_evening_dua1_title" >Other supplications to be recited in the morning &amp; evenings :</string>
    <string name="morning_and_evening_dua1_arabic" translatable="false">بِسْمِ اللَّهِ الَّذِي لَا يَضُرُّ مَعَ اسْمِهِ شَيْءٌ فِي الْأَرْضِ وَلَا فِي السَّمَاءِ وَهُوَ السَّمِيعُ الْعَلِيمُ</string>
    <string name="morning_and_evening_dua1" translatable="false">We have made (started) the morning (and night) in whose Name nothing in the skies and the earth can harm and He is the All-hearing, the All-knowing.</string>
    <string name="morning_and_evening_dua1_ar_en" translatable="false">bismi allah al ladi la yadoro maAA ismihi shayAo fi al ardi wala fi al samaAi wa howa samiOO AAlim</string>
    <string name="evening_dua1_title" >In the evening recite :</string>
    <string name="evening_dua1_arabic" translatable="false">أَمْسَيْنَا وَأَمْسَى الْمُلْكُ لِلَّهِ رَبِّ الْعَالَمِينَ اللَّهُمَّ إِنِّي أَسْأَلُكَ خَيْرَ هَذِهِ اللَّيْلَةَ فَتْحَهَا وَنَصْرَهَا وَنُورَهَا وَبَرَكَتَهَا وَهُدَاهَا وَأَعُوذُ بِكَ مِنْ شَرِّ مَا فِيهَا وَشَرِّ مَا بَعْدَهَا</string>
    <string name="evening_dua1" translatable="false">The evening has come to me and the whole universe belongs to Allah who is The Lord of the worlds. O Allah, I ask of you the good of the night, it\'s success and aid and its nur (celestial light) and barakaat (blessings) and seek hidayat (guidance) and refuge from the evil of this night and the evil that is to come later.</string>
    <string name="evening_dua1_ar_en" translatable="false">amsayna wamsa almolko lillahi rabbi al AAlamina al lahomma inni asAAloka khayra hadihi al laylata fatḥaha wanasṣraha wanoraha wabarakataha wahodaha waAOOdo bika min sharri ma fiha wacharri ma bAAdaha</string>
    <string name="evening_dua2_title" >Alternatively recite this :</string>
    <string name="evening_dua2_arabic" translatable="false">اللَّهُمَّ بِكَ أَمْسَيْنَا وَبِكَ أَصْبَحْنَا وَبِكَ نَحْيَا وَبِكَ نَمُوتُ وَإِلَيْكَ النُّشُورُ</string>
    <string name="evening_dua2" translatable="false">O Allah we enter the night and the day and live and die with Your Qudrat (strength) and to You do we return.</string>
    <string name="evening_dua2_ar_en" translatable="false">alahouma bika amsayna wa bika nahya wa bika namot wa ilayka el noshr</string>
    <string name="evening_dua3_title" >After the expiry of Maghrib time, recite this dua :</string>
    <string name="evening_dua3_arabic" translatable="false">اللَّهُمَّ إِنَّ هَذَا إِقْبَالُ لَيْلِكَ وَإِدْبَارُ نَهَارِكَ وَأَصْوَاتُ دُعَاتِكَ فَاغْفِرْ لِي</string>
    <string name="evening_dua3" translatable="false">O Allah, this is the time of the coming of the night and the passing of the day and the voices of those calling You to forgive us.</string>
    <string name="evening_dua3_ar_en" translatable="false">allahoma ina hada iqbalo laylika wa idbaro naharika wa aswato doAAtika faghfirli</string>
    <string name="source_evening_dua1">the source of the duas : <a href="https://www.searchtruth.com/dua/1/">searchtruth</a></string>
    <string name="before_sleeping_dua1_arabic" translatable="false">بِاسْمِكَ رَبِّي وَضَعْتُ جَنْبِي، وَبِكَ أَرْفَعُهُ، فَإِنْ أَمْسَكْتَ نَفْسِي فَارْحَمْهَا، وَإِنْ أَرْسَلْتَهَا فَاحْفَظْهَا، بِمَا تَحْفَظُ بِهِ عِبَادَكَ الصَّالِحِينَ.</string>
    <string name="before_sleeping_dua1" translatable="false">In Your name my Lord, I lie down and in Your name I rise, so if You should take my soul then have mercy upon it, and if You should return my soul then protect it in the manner You do so with Your righteous servants.</string>
    <string name="before_sleeping_dua1_ar_en" translatable="false">Bismika rabbee wadaAAtu janbee wabika arfaAAuh, fa-in amsakta nafsee farhamha, wa-in arsaltaha fahfathha bima tahfathu bihi AAibadakas-saliheen</string>
    <string name="before_sleeping_dua2_arabic" translatable="false">اللَّهمَّ إِنَّكَ خَلَقْتَ نَفْسِي وَأَنْتَ تَوَفَّاهَا لَكَ مَمَاتُهَا وَمَحْيَاهَا، إِنْ أَحْيَيْتَهَا فَاحْفَظْهَا، وَإِنْ أَمَتَّهَا فَاغْفِرْ لَهَا. اللَّهمَّ إِنِّي أَسْأَلُكَ العَافِيَةَ.</string>
    <string name="before_sleeping_dua2_ar_en" translatable="false">Allahumma innaka khalaqta nafsee wa-anta tawaffaha, laka mamatuha wamahyaha in ahyaytaha fahfathha, wa-in amattaha faghfir laha. Allahumma innee as-alukal-AAafiyah.</string>
    <string name="before_sleeping_dua2" translatable="false">O Allah, verily You have created my soul and You shall take its life, to You belongs its life and death. If You should keep my soul alive then protect it, and if You should take its life then forgive it. O Allah, I ask You to grant me good health.’</string>
    <string name="before_sleeping_dua3" translatable="false">O Allah, protect me from Your punishment on the day Your servants are resurrected.</string>
    <string name="before_sleeping_dua3_ar_en" translatable="false">Allahumma qinee AAathabaka yawma tabAAathu AAibadak.</string>
    <string name="before_sleeping_dua3_arabic" translatable="false">اللَّهُمَّ قِنِي عَذَابَكَ يَوْمَ تَبْعَثُ عِبَادَكَ.</string>
    <string name="before_sleeping_dua4" translatable="false">In Your name O Allah, I live and die.</string>
    <string name="before_sleeping_dua4_ar_en" translatable="false">Bismikal-lahumma amootu wa-ahya.</string>
    <string name="before_sleeping_dua4_arabic" translatable="false">اللَّهُمَّ بِاسْـمِكَ أَمُوتُ وَأَحْيَا</string>
    <string name="before_sleeping_dua5" translatable="false">All praise is for Allah, Who fed us and gave us drink, and Who is sufficient for us and has sheltered us, for how many have none to suffice them or shelter them.</string>
    <string name="before_sleeping_dua5_ar_en" translatable="false">Alhamdu lillahil-lathee atAAamana wasaqana, wakafana, wa-awana, fakam mimman la kafiya lahu wala muAwee.</string>
    <string name="before_sleeping_dua5_arabic" translatable="false">اَلْحَمْدُ للهِ الَّذِي أَطْعَمَنَا وَسَقَانَا، وَكَفَانَا، وَآوَانَا، فَكَمْ مِمَّنْ لا كَافِيَ لَه ُُ وَلا مُؤْوِي.</string>
    <string name="okay">okay</string>
    <string name="the_thikr">the thikr</string>
    <string name="how_many_times_do_you_want_to_repeat_it">how many times do you want to repeat it</string>
    <string name="you_have_completed">You Have Completed</string>
    <string name="repeat_again">Repeat Again</string>
    <string name="cancel">Cancel</string>
    <string name="stop">Stop</string>
    <string name="repeat_with_other_settings">Repeat with other settings</string>
    <string name="settings">Settings</string>
    <string name="vibration_on_every_tasbiha">Vibration On Every Tasbiha</string>
    <string name="language">Language</string>
    <string name="vibration_when_the_thikr_changes">Vibration When The Thikr Changes</string>
    <string name="save">Save</string>
    <string name="reset_this_thikr_only">Reset This Thikr Only</string>
    <string name="reset_every_thing">Reset Every thing</string>
    <string name="surat_al_mulk">Surat Al Mulk ... to be read every night</string>
    <string name="surat_al_kahf">Surat Al Kahf ... to be read every friday</string>
</resources>