<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_50"
    android:orientation="vertical"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        >
        <LinearLayout
            android:id="@+id/List"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:background="@color/colorPrimaryDark"
                android:layout_margin="4dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/thikrTVarEn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/how_many_times_do_you_want_to_repeat_it"
                    android:textColor="@color/white"
                    app:fontFamily="@font/allerta_stencil"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/thikrTVEn"
                    android:padding="8dp"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:fontFamily="@font/allerta_stencil"
                    android:gravity="center"
                    android:text="@string/the_thikr"
                    android:textSize="16sp"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/red_700"
            android:padding="8dp"
            android:text="@string/cancel"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnok"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/okay"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>