<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:background="@color/green_100"
    android:padding="16dp"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:fontFamily="@font/allerta_stencil" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="horizontal">
        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:gravity="left"
            android:padding="8dp"
            android:layout_weight="1"
            android:text="@string/vibration_on_every_tasbiha"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:fontFamily="@font/allerta_stencil" />
        <CheckBox
            android:id="@+id/vibration_on_every_tasbiha"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="true" />

    </LinearLayout>

    <LinearLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:gravity="left"
            android:padding="8dp"
            android:layout_weight="1"
            android:text="@string/vibration_when_the_thikr_changes"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:fontFamily="@font/allerta_stencil" />
        <CheckBox
            android:id="@+id/vibration_when_the_thikr_changes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="horizontal">
        <TextView
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:gravity="left"
            android:padding="8dp"
            android:layout_weight="1"
            android:text="@string/language"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:fontFamily="@font/allerta_stencil" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <RadioButton
                android:id="@+id/rbAr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                app:fontFamily="@font/allerta_stencil"
                android:layout_weight="1"
                android:text="العربية" />

            <RadioButton
                android:id="@+id/rbEn"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="English" />
        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/okaybt"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/save"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textAllCaps="false"
        android:fontFamily="@font/allerta_stencil"
        android:textColor="@color/white"
        android:textSize="20sp"/>
</LinearLayout>